# cook-master

./: README.md  docker-compose.yml  heroku.yml  package-lock.json  paul.txt  update.sh
.github/workflows/: deploy.yml
C/: CMakeLists.txt  main.c
C/curl-8.0.1_6-win64-mingw/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
api/: README.md  package-lock.json
api/src/auth/: auth.service.ts
backend/: Dockerfile  custom.conf  index.php
backend/public/: index.php
backend/public/database/: config.php  dbConnect.php
cookmasterandroid/: settings.gradle
cookmasterandroid/app/: build.gradle
cookmasterandroid/gradle/wrapper/: gradle-wrapper.properties
database/: createDatabase.sql  createTables.sql
docs/conception/: descriptif-detaille-java.docx  diagramme-package.mdj
docs/data/: MCD.lo1  MCD.loo
docs/goodPractices/: git.md
docs/infrastructure/: cookmaster-infra.pkt  doc-infra.odt  ip-plan.docx
docs/infrastructure/packetTracer/: script.md  simulation.pkt
docs/projectManagement/: OnlineGantt.gantt  Project group meeting template.docx  bill.xlsx  gantt.gantt  group-meeting-03-05-2023.docx  group-meeting-12-04-2023.docx  group-meeting-13-05-2023.docx  group-meeting-28-05-2023.docx
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: global.scss  main.jsx
webapp/: README.md  docker-compose.yml  nginx.conf
webapp/api/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
webapp/api/src/: main.ts  (+1 more)
webapp/frontend/: .env  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
(+429 files in other folders)
